--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cra-caddy-docker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chexex.github.io/cra-caddy-docker/",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -10,7 +11,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "CI=true react-scripts test --env=jsdom",
+    "test:coverage": "npm test -- --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
